# toolkit-py

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: demo.py
src/toolkit_py/: __init__.py  cli.py  files.py  strings.py
tests/: test_files.py  test_strings.py
